# async-trait-playground

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/frobnicate/: mod.rs
src/frobnicate/bar/: mod.rs
src/frobnicate/foo/: mod.rs
