[package]
name = "async-trait-playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[features]
bar = []

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web.git", branch = "real-async-traits" }
tokio = { version = "1.35.1", features = ["net", "macros", "rt-multi-thread"] }
